exports[`test renderer should render table of contents 1`] = `
<div>
  <div>
    <div>
      <input
        onChange={[Function]}
        placeholder="Filter by name"
        value="foo" />
    </div>
  </div>
</div>
`;

exports[`test should filter list when search field contains a query 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "name": "Button",
          "slug": "button",
        },
        Object {
          "name": "Input",
          "slug": "input",
        },
        Object {
          "name": "Textarea",
          "slug": "textarea",
        },
      ]
    } />
</_class>
`;

exports[`test should filter list when search field contains a query 2`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="but">
  <_class
    items={
      Array [
        Object {
          "name": "Button",
          "slug": "button",
        },
      ]
    } />
</_class>
`;

exports[`test should filter section names 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={Array []} />,
          "heading": true,
          "name": "Introduction",
          "slug": "introduction",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Button",
                          "slug": "button",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Buttons",
          "slug": "buttons",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Input",
                          "slug": "input",
                        },
                        Object {
                          "name": "Textarea",
                          "slug": "textarea",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Forms",
          "slug": "forms",
        },
      ]
    } />
</_class>
`;

exports[`test should filter section names 2`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="frm">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={Array []} />,
          "heading": true,
          "name": "Forms",
          "slug": "forms",
        },
      ]
    } />
</_class>
`;

exports[`test should render a filtered list, should hide empty sections 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={Array []} />,
          "heading": true,
          "name": "Introduction",
          "slug": "introduction",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Button",
                          "slug": "button",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Buttons",
          "slug": "buttons",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Input",
                          "slug": "input",
                        },
                        Object {
                          "name": "Textarea",
                          "slug": "textarea",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Forms",
          "slug": "forms",
        },
      ]
    } />
</_class>
`;

exports[`test should render a filtered list, should hide empty sections 2`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="inp">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Input",
                          "slug": "input",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Forms",
          "slug": "forms",
        },
      ]
    } />
</_class>
`;

exports[`test should render a renderer 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "name": "Button",
          "slug": "button",
        },
        Object {
          "name": "Input",
          "slug": "input",
        },
        Object {
          "name": "Textarea",
          "slug": "textarea",
        },
      ]
    } />
</_class>
`;

exports[`test should render renderer with sections with nested components 1`] = `
<_class
  onSearchTermChange={[Function]}
  searchTerm="">
  <_class
    items={
      Array [
        Object {
          "content": <_class
            items={Array []} />,
          "heading": true,
          "name": "Introduction",
          "slug": "introduction",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Button",
                          "slug": "button",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Buttons",
          "slug": "buttons",
        },
        Object {
          "content": <_class
            items={
                  Array [
                        Object {
                          "name": "Input",
                          "slug": "input",
                        },
                        Object {
                          "name": "Textarea",
                          "slug": "textarea",
                        },
                      ]
            } />,
          "heading": true,
          "name": "Forms",
          "slug": "forms",
        },
      ]
    } />
</_class>
`;
